home page fix 2. submit button aligned 3. board list

--- a/src/app/feature/components/subscribe/subscribe.component.less
+++ b/src/app/feature/components/subscribe/subscribe.component.less
@@ -24,7 +24,7 @@
       color: #ff0000;
     }
     .button-container {
-      padding: 1px 0;
+      padding: 2px 0;
       border-radius: 1px;
       .submit-button {
         color: #ffcc00;
