--- a/src/app/shared/components/products-carousal/products-carousal.component.less
+++ b/src/app/shared/components/products-carousal/products-carousal.component.less
@@ -27,7 +27,9 @@
   opacity: 0;
   transition: all 0.5s ease;
 }
-
+.board-image {
+  border: 1px solid #c8c7cc;
+}
 @media (max-width: 1000px) {
   .item {
     margin: 0;
@@ -182,6 +184,9 @@
   }
 }
 @media only screen and (max-width: 767px) {
+  .board-image {
+    max-height: 210px;
+  }
   .title-new-arrivals {
     padding-left: 3%;
   }
@@ -461,4 +466,9 @@
 .owl-item.active h3:after {
   transform: translate3d(0, 0, 1px);
   transition-delay: 1s;
+}
+@media only screen and (max-width: 375px) {
+  .board-image {
+    max-height: 210px;
+  }
 }
